Configuración para primer despliegue